# BLENDER

./: ##AUTO_GIT_COMMIT.cmd  .gitignore  AUTHORS  AUTHORS_with_metadata_delete_me.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.f39b33f  CMakeSettings.json  GNUmakefile  README.md  SPDX_blender_foundation_rename_to_authors_once.py  SPDX_glsl_header_create_once_then_delete_me.py  make.bat  projects.blender.org  projects.blender.org.pub  pyproject.toml  tage qqqqq:q
.gitea/issue_template/: api_docs.yaml  bug.yaml
.github/workflows/: stale.yml
build_files/build_environment/: CMakeLists.txt  install_linux_packages.py
build_files/cmake/: macros.cmake  project_info.py  testing.cmake
build_files/config/: pipeline_config.yaml
build_files/utils/: apply_mblender_patches.py  make_bpy_wheel.py  make_source_archive.py  make_update.py  make_utils.py
build_files/windows/: apply_mblender_patches.cmd  autopep8.cmd  check_libraries.cmd  detect_custom_vcvars.cmd  find_dependencies.cmd  parse_arguments.cmd  show_help.cmd
diff/: MB-0002-readme-file.diff  MB-0003-mblender-make-option-windows.diff  MB-0003-mblender-make-target-windows.diff  MB-0004-mblender-make-option-linux.diff  MB-0004-mblender-make-target-linux.diff
doc/blender_file_format/: mystery_of_the_blend.html
doc/license/: SPDX-license-identifiers.txt
doc/python_api/: conf.py  requirements.txt  sphinx_doc_gen.py
intern/: CMakeLists.txt
intern/atomic/: CMakeLists.txt  atomic_ops.h
intern/audaspace/: CMakeLists.txt
intern/cycles/: CMakeLists.txt
intern/deprecate_api/: deprecate_api.h
intern/dualcon/: dualcon.h
intern/ffmpeg/: CMakeLists.txt  ffmpeg_compat.h
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_IContext.h  GHOST_IContext.hh  GHOST_IEvent.hh  GHOST_IEventConsumer.hh  GHOST_ISystem.h  GHOST_ISystem.hh  GHOST_ISystemPaths.hh  GHOST_ITimerTask.hh  GHOST_IWindow.hh  GHOST_IXrContext.hh  GHOST_Rect.hh  GHOST_Types.h
intern/guardedalloc/: CMakeLists.txt  MEM_guardedalloc.h
intern/locale/: CMakeLists.txt
intern/memutil/: CMakeLists.txt  MEM_alloc_string_storage.hh
intern/mikktspace/: mikk_atomic_hash_set.hh  mikk_simd.hh  mikk_util.hh  mikktspace.hh  mikktspace_ref.hh
intern/opencolorio/: CMakeLists.txt  fallback_impl.cc  gpu_shader_display_transform_frag.glsl  ocio_capi.cc  ocio_capi.h  ocio_impl.cc  ocio_impl.h  ocio_impl_glsl.cc  ocio_shader_shared.hh
intern/opensubdiv/: CMakeLists.txt  opensubdiv_evaluator.hh
intern/rigidbody/: rb_bullet_api.cpp
intern/slim/: CMakeLists.txt  slim_capi.h  slim_matrix_transfer.h
intern/utfconv/: utf_winfunc.cc
locale/: languages
locale/extensions/: tags.py
locale/po/: ca.po  cs.po  de.po  es.po  es_ES.po  fr.po  hu.po  it.po  ja.po  ka.po  ko.po  nl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sr@latin.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
mblender/patches/: MB-0003-mblender-make-target-windows.diff  MB-0004-mblender-make-target-linux.diff
release/datafiles/: blender_icons_geom.py  config.ocio  (+3 more)
source/: CMakeLists.txt
source/blender/blendthumb/: CMakeLists.txt
source/blender/blendthumb/src/: Info.plist  README.md  ThumbnailExtensionMacOS.entitlements  ThumbnailProvider.h  ThumbnailProvider.hh  ThumbnailProvider.mm  blender_thumbnailer.cc  thumbnail_provider.h  thumbnail_provider.mm
source/blender/blenfont/: BLF_api.h  BLF_api.hh  CMakeLists.txt
source/blender/blenfont/intern/: blf.cc  blf_default.cc  blf_font.cc  blf_font_default.cc  blf_font_win32_compat.cc  blf_glyph.c  blf_glyph.cc  blf_icon.cc  blf_internal.h  blf_internal.hh  blf_internal_types.h  blf_internal_types.hh  blf_shaping.cc  blf_thumbs.cc
source/blender/draw/intern/shaders/: CMakeLists.txt  common_aabb_lib.glsl  common_compute_lib.glsl  common_debug_print_lib.glsl  common_debug_shape_lib.glsl  common_fxaa_lib.glsl  common_gpencil_lib.glsl  common_grease_pencil_lib.glsl  common_hair_lib.glsl  common_intersect_lib.glsl  common_math_geom_lib.glsl  common_math_lib.glsl  common_pointcloud_lib.glsl  common_shape_lib.glsl  common_subdiv_custom_data_interp_comp.glsl  common_subdiv_ibo_lines_comp.glsl  common_subdiv_ibo_lines_loose_comp.glsl  common_subdiv_patch_evaluation_comp.glsl  common_subdiv_vbo_edituv_nor_comp.glsl  common_vbo_edituv_nor_comp.glsl  common_view_clipping_lib.glsl  common_view_lib.glsl  draw_command_generate_comp.glsl  draw_debug_print_display_vert.glsl  draw_hair_refine_info.hh  draw_intersect_lib.glsl  draw_math_geom_lib.glsl  draw_model_lib.glsl  draw_resource_finalize_comp.glsl  draw_subdivision_info.hh  draw_view_finalize_comp.glsl  draw_view_info.hh  draw_view_lib.glsl  draw_view_reconstruction_lib.glsl  draw_visibility_comp.glsl
source/blender/render/hydra/: CMakeLists.txt  camera.cc  camera.h  engine.cc  engine.h  finalEngine.cc  finalEngine.h  final_engine.cc  final_engine.h  light_tasks_delegate.cc  light_tasks_delegate.h  previewEngine.cc  previewEngine.h  preview_engine.cc  preview_engine.h  python.cc  renderTaskDelegate.cc  renderTaskDelegate.h  render_task_delegate.cc  render_task_delegate.h  simpleLightTaskDelegate.cc  simpleLightTaskDelegate.h  simple_light_task_delegate.cc  simple_light_task_delegate.h  utils.cc  utils.h  viewportEngine.cc  viewportEngine.h  viewport_engine.cc  viewport_engine.h
source/blender/render/hydra/sceneDelegate/: blenderSceneDelegate.cc  blenderSceneDelegate.h  id.cc  id.h  instance.cc  instance.h  light.cc  light.h  material.cc  material.h  mesh.cc  mesh.h  mtlxHydraAdapter.cc  mtlxHydraAdapter.h  object.cc  object.h  world.cc  world.h
source/blender/render/hydra/scene_delegate/: blender_scene_delegate.cc  blender_scene_delegate.h  curves.cc  curves.h  id.cc  id.h  image.cc  image.h  instancer.cc  instancer.h  light.cc  light.h  material.cc  material.h  mesh.cc  mesh.h  mtlx_hydra_adapter.cc  mtlx_hydra_adapter.h  object.cc  object.h  settings.h  usd_scene_delegate.cc  usd_scene_delegate.hh  volume.cc  volume.h  volume_modifier.cc  volume_modifier.h  world.cc  world.h
test-points-in-planes/: test-points-in-planes.blend  test_points_in_planes.py
tests/: CMakeLists.txt
(+7576 files in other folders)
